part2/02/manifests/deployment-image-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-image-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-image-backend
  template:
    metadata:
      labels:
        app: todo-image-backend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-image-backend
          image: thepapermen/devopswithkubernetes:image-backend-0.4.0-alpine
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
