part2/02/manifests/service-todo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
